--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+#Ignore .terraform.lock.hcl files
+.terraform.lock.hcl
